[package]
name = "lsp-keep-alive-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.93.0"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
